# CorticalSurfaceEvaluation

./: .gitignore  README.md  build-app  build-tools  build.js  build.sh  eval-db  import  recon  recon.sh
app/: .gitignore  app.desktop  app.js  build.js  index.html  package.json
app.nw/: app.css  app.icns  app.js  appdmg.json  build.js  index.html  package.json
app.nw/app/: app.css  app.js  index.html  main.js
config/: data-release-subjects-40-1.csv  data-release-subjects-40-2-wo-missing-vol2mesh.csv  data-release-subjects-40-2.csv  data-release-subjects-43.csv  initial-test-subjects-9.csv  initial_10.csv  recon-neonatal-cortex.cfg  release_40-1.csv
results/: initial-test-subjects-10-scores.csv
scripts/: add-cortex-mask.py  add-rater.py  calculate-intensity-range.py  construct-evaluation-sets.py  create-tables.py  create-tables.sql  export-rois.py  group-screenshots-by-score.py  import-scans.py  import-segmentations.py  import-vol2mesh-surfaces.py  plot-results.py  populate-database.sh  select-regions-of-interest.py  select-rois.py  take-screenshots-of-roi-bounds.py  take-screenshots.py
tools/: CMakeLists.txt  group-screenshots-by-score.py  import-vol2mesh-surfaces.py  join-hemispheres.py  plot-results.py  select-rois.cc  select-rois.py
